--- a/Calendar/View/PageCalendar.xaml
+++ b/Calendar/View/PageCalendar.xaml
@@ -18,8 +18,8 @@
             <RowDefinition/>
             <RowDefinition Height="8*"/>
         </Grid.RowDefinitions>
-        <Button Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Назад" FontSize="9px" Background="#be1010" FontWeight="Black"/>
-        <Button Grid.Row="0" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Вперед" FontSize="9px" Background="#be1010" FontWeight="Black"/>
+        <Button x:Name="LastMonthBt" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Назад" FontSize="9px" Background="Red" FontWeight="Black" Click="Button_Click"/>
+        <Button x:Name="NextMonthBt" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Вперед" FontSize="9px" Background="Red" FontWeight="Black" Click="Button_Click"/>
         <TextBlock Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding}" FontSize="25px"/>
         <WrapPanel Grid.Row="1" Grid.Column="1">
         </WrapPanel>
